--- a/homework/css/diaryDetail.css
+++ b/homework/css/diaryDetail.css
@@ -71,17 +71,29 @@ main {
   word-wrap: break-word;
   padding: 0 10px;
 }
-
+.btn-area {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  margin: 0 0 10px 0;
+  height: 30px;
+  /* background-color: #ababab; */
+  gap: 10px;
+}
 .edit-button {
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #d4d4d4;
-  margin-top: 10px;
   width: 44px;
   height: 30px;
-
-  align-self: flex-end;
-  margin-bottom: 30px;
+}
+.delete-button {
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid #d4d4d4;
+  width: 44px;
+  height: 30px;
 }
 
 .disable {
