💄 style: 일기 상세 페이지 내용 문단 스타일 수정

--- a/section03/css/detail.css
+++ b/section03/css/detail.css
@@ -53,6 +53,9 @@
 .detail-content p {
   font-weight: var(--weight-medium);
   margin-top: var(--gap-xs);
+  line-height: 3rem;
+  word-break: break-all;
+  white-space: wrap;
 }
 
 .actions {
