--- a/CSS&JS 마스터/일기상세페이지.css
+++ b/CSS&JS 마스터/일기상세페이지.css
@@ -268,3 +268,10 @@ main {
     border-bottom: 1px solid #e4e4e4;
     padding-bottom: 10px;
 }
+
+@media (max-width: 1200px) {
+    .layout {
+        width: 100%;
+        padding: 0 25px;
+    }
+}
