--- a/CSS&JS 마스터/수정.css
+++ b/CSS&JS 마스터/수정.css
@@ -48,7 +48,6 @@ main {
 
 .main_header {
     width: 100%;
-    height: 64px;
     gap: 16px;
     display: flex;
     flex-direction: column;
@@ -66,7 +65,6 @@ main {
 
 .main_header_radio {
     width: 100%;
-    height: 24px;
     gap: 20px;
     display: flex;
 }
@@ -260,4 +258,15 @@ main {
     width: 100%;
     border-bottom: 1px solid #e4e4e4;
     padding-bottom: 10px;
+}
+
+@media (max-width: 1200px) {
+    .layout {
+        width: 100%;
+        padding: 0 25px;
+    }
+
+    .main_header_radio {
+        flex-direction: column;
+    }
 }
