--- a/CSS&JS 마스터/일기보관함.css
+++ b/CSS&JS 마스터/일기보관함.css
@@ -12,7 +12,7 @@ body {
 }
 
 .layout {
-    width: 1168px;
+    max-width: 1168px;
     margin: 0 20px 40px;
 }
 
@@ -146,7 +146,7 @@ body {
 
 .storage_rightBody {
     width: 360px;
-    height: fit-content;
+    height: 604px;
     border-radius: 16px;
     padding: 24px;
     gap: 40px;
@@ -154,37 +154,27 @@ body {
     border: 1px solid #d4d3d3;
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
 }
 
-.storage_rightBody_header{
-    width: 312px;
-    height: 24px;
-    font-weight: 700;
-    font-size: 24px;
+.storage_rightBody_header {
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
     line-height: 24px;
     letter-spacing: -1px;
     color: #000000;
 }
 
 .storage_rightBody_inputBox {
-    width: 312px;
-    height: 404px;
-    gap: 40px;
-    display: flex;
-    flex-direction: column;
-}
-
-.emotion_radioBox {
-    width: 312px;
-    height: 108px;
-    gap: 16px;
+    width: 100%;
+    gap: 18px;
     display: flex;
     flex-direction: column;
 }
 
 .radioBox_header {
-    width: 312px;
-    height: 24px;
+    width: 100%;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
@@ -193,8 +183,7 @@ body {
 }
 
 .radioBox_body {
-    width: 312px;
-    height: 68px;
+    width: 100%;
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -223,23 +212,21 @@ body {
 }
 
 .textBox {
-    width: 312px;
-    height: 256px;
+    width: 100%;
     gap: 24px;
     display: flex;
     flex-direction: column;
 }
 
 .titleBox {
-    width: 312px;
-    height: 76px;
+    width: 100%;
     gap: 8px;
     display: flex;
     flex-direction: column;
 }
 
 .titleBox label {
-    width: 312px;
+    width: 100%;
     height: 20px;
     font-weight: 500;
     font-size: 14px;
@@ -250,7 +237,7 @@ body {
 }
 
 .titleBox input {
-    width: 312px;
+    width: 100%;
     height: 48px;
     border-radius: 8px;
     padding: 12px 16px;
@@ -260,15 +247,14 @@ body {
 }
 
 .contentBox {
-    width: 312px;
-    height: 156px;
+    width: 100%;
     gap: 8px;
     display: flex;
     flex-direction: column;
 }
 
 .contentBox label {
-    width: 312px;
+    width: 100%;
     height: 20px;
     font-weight: 500;
     font-size: 14px;
@@ -279,7 +265,7 @@ body {
 }
 
 .contentBox textarea {
-    width: 312px;
+    width: 100%;
     height: 128px;
     border-radius: 8px;
     padding: 12px 16px;
@@ -290,9 +276,8 @@ body {
 }
 
 .storage_rightBody button {
-    width: 312px;
+    width: 100%;
     height: 48px;
-    gap: 16px;
     border-radius: 8px;
     padding: 8px 10px;
     gap: 10px;
@@ -384,4 +369,24 @@ a {
     left: 97%;
     bottom: 50px;
     cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+    .main {
+        flex-wrap: wrap;
+    }
+    #storage_leftBody {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        order: 2;
+        place-items: center center;
+        gap: 0px;
+    }
+    .diaryCard {
+        width: 100%;
+    }
+    .storage_rightBody {
+        order: 1;
+        width: 100%;
+    }
 }
