--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -219,6 +219,7 @@ ul li {
   align-items: flex-start;
   gap: 1.5rem;
   align-self: stretch;
+  margin-left: 2rem;
 }
 .article {
   display: flex;
@@ -334,7 +335,7 @@ ul li {
   width: 22.5rem;
   min-width: 22.5rem;
   max-width: 47.5rem;
-  padding: 1.5rem;
+  padding: 1.5rem 0 1.5rem 1.5rem;
   flex-direction: column;
   align-items: center;
   gap: 2.5rem;
