--- a/[240829]_section01/detail.css
+++ b/[240829]_section01/detail.css
@@ -14,7 +14,7 @@
 .container {
   padding: 20px 200px;
   overflow: scroll;
-
+  min-width: 320px;
   .header {
     display: flex;
     flex-direction: column;
@@ -159,6 +159,10 @@
     border: 1px solid beige;
     background-color: beige;
   }
+  .cancel {
+    border: 1px solid rgb(129, 128, 128);
+    background-color: white;
+  }
   .saveBtn {
     border: 1px solid rgb(126, 150, 212);
     background-color: rgb(126, 150, 212);
@@ -190,6 +194,7 @@
       color: white;
       border: none;
       border-radius: 4px;
+      cursor: pointer;
     }
   }
 }
@@ -207,5 +212,34 @@
     border-bottom: 1px solid #d4d3d3;
     margin-bottom: 10px;
     padding: 5px;
+  }
+}
+.floating-btn {
+  position: fixed;
+  bottom: 40px;
+  right: 50px;
+  background-color: #3a3838;
+  padding: 5px;
+  border-radius: 100%;
+  cursor: pointer;
+}
+@media (max-width: 1200px) {
+  .container {
+    padding: 30px;
+  }
+
+  .prevBack {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    button {
+      border: none;
+      font-size: 27px;
+      background-color: white;
+      cursor: pointer;
+    }
+  }
+  .prevBtn {
+    display: none;
   }
 }
