--- a/다이어리/diary-detail.css
+++ b/다이어리/diary-detail.css
@@ -38,13 +38,14 @@ html {
 .header_frame {
   display: flex;
   height: 3.75rem;
-  align-items: center;
-  gap: 0.625rem;
-  align-self: stretch;
 }
 
 .header_frame > a {
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px
 }
 
 .logo {
@@ -52,12 +53,10 @@ html {
   width: 8.125rem;
   height: 2.5rem;
   align-items: center;
-  gap: 0.625rem;
   color: #000;
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 1rem;
   letter-spacing: -0.011rem;
 }
 
