--- a/css/detail.css
+++ b/css/detail.css
@@ -33,8 +33,10 @@
   font-size: var(--font-size-1);
   color: var(--font-color-7);
 }
-.detailWrap .detailContent {
-  min-height: 40vh;
+.detailWrap .detailContentWrap {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
 }
 .detailWrap .buttonWrap {
   width: 100%;
@@ -42,7 +44,7 @@
   justify-content: flex-end;
   gap: 16px;
   border-bottom: 1px solid #000;
-  padding: 16px 0;
+  padding: 0 0 16px;
 }
 
 .whiteBtn {
@@ -62,4 +64,21 @@
   border: 1px solid var(--border-color-1);
   border-radius: 8px;
   white-space: nowrap;
+}
+
+.copyBtn {
+  width: 5.6875rem;
+  height: 1.5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5625rem;
+  border: none;
+  background: none;
+  color: var(--font-color-8);
+  font-size: 1rem;
+  align-self: flex-end;
+}
+.copyBtn img {
+  width: 1.5rem;
+  height: 1.5rem;
 }/*# sourceMappingURL=detail.css.map */
