--- a/scss/detail.scss
+++ b/scss/detail.scss
@@ -37,8 +37,10 @@
     }
   }
 
-  .detailContent {
-    min-height: 40vh;
+  .detailContentWrap {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem; //12px
   }
 
   .buttonWrap {
@@ -47,7 +49,7 @@
     justify-content: flex-end;
     gap: 16px;
     border-bottom: 1px solid #000;
-    padding: 16px 0;
+    padding: 0 0 16px;
   }
 }
 
@@ -68,4 +70,24 @@
   border: 1px solid var(--border-color-1);
   border-radius: 8px;
   white-space: nowrap;
+}
+
+.copyBtn {
+  width: 5.6875rem; // 91px
+  height: 1.5rem; // 24px
+  display: flex;
+  align-items: center;
+  gap: 0.5625rem; // 9px
+
+  border: none;
+  background: none;
+  color: var(--font-color-8);
+  font-size: 1rem; // 16px
+
+  align-self: flex-end;
+
+  img {
+    width: 1.5rem; // 24px
+    height: 1.5rem; // 24px
+  }
 }
