--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 .navBottom {
+  width: var(--max-width);
   display: flex;
   justify-content: space-between;
   position: sticky;
@@ -18,8 +19,6 @@
 }
 
 .filterSearchBox {
-  width: var(--max-width);
-  margin: 0 auto;
   display: flex;
   gap: 8px;
   align-items: center;
@@ -40,6 +39,7 @@
 .filterSearchBox .selectBox .filterPopBtn {
   width: 100%;
   height: 100%;
+  min-width: 6.5625rem;
   display: block;
   text-align: left;
   border: none;
@@ -75,6 +75,9 @@
   background-image: url("../img/check_outline_light_xs.svg");
   background-repeat: no-repeat;
   background-position: 90% center;
+}
+.filterSearchBox .searchMobilePopBtn {
+  display: none;
 }
 .filterSearchBox .searchBox {
   width: 21.25rem;
@@ -126,6 +129,7 @@
   align-items: center;
   font-size: var(--font-size-2);
   line-height: 24px;
+  align-self: flex-end;
 }
 
 section {
