--- a/scss/media.scss
+++ b/scss/media.scss
@@ -57,8 +57,8 @@
     width: 100%;
     padding: 0;
     .filterSearchBox {
-      display: grid;
-      grid-template-columns: 1fr 3fr;
+      // display: grid;
+      // grid-template-columns: 1fr 3fr;
 
       .selectBox,
       .searchBox {
@@ -144,5 +144,46 @@
   .commentWrap {
     padding-left: 20px;
     padding-right: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .headerBanner {
+    img {
+      transform: none;
+    }
+  }
+
+  .navBottom .filterSearchBox {
+    width: 100%;
+    justify-content: space-between;
+    .searchBox {
+      width: 100%;
+      height: 0;
+      transition: height 0.5s;
+      display: none;
+
+      &.active {
+        display: flex;
+        height: 48px;
+        transition: height 0.5s;
+      }
+    }
+
+    .searchMobilePopBtn {
+      width: 48px;
+      height: 48px;
+      display: block;
+      background-color: #fff;
+      background-image: url("../img/search_outline_light_m.svg");
+      background-position: center;
+      background-repeat: no-repeat;
+      border: 1px solid var(--border-color-2);
+      border-radius: 8px;
+
+      &.active {
+        background-color: var(--bg-color-1);
+      }
+    }
   }
 }
