--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: center;
 
-    padding: 0px 1.25rem 0px 1.25rem;
+    padding: 0rem 1.25rem 0rem 1.25rem;
 }
 
 .banner_img {
@@ -83,15 +83,16 @@
     display: flex;
     flex-direction: column;
     gap: 2.625rem;
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
 }
 
 .filter_item {
-    /* width: 1186px; */
     width: 100%;
     position: sticky;
-    top: 0.625;
+    top: 0.625rem;
     z-index: 10;
-    padding: 0rem 1.25rem 0rem 1.25rem;
+    /* padding: 0rem 1.25rem 0rem 1.25rem; */
 }
 
 .mood_select_box {
@@ -107,8 +108,7 @@
 .contents {
     display: flex;
     gap: 1.5rem;
-
-    padding: 0rem 1.25rem 0rem 1.25rem;
+    /* padding: 0rem 1.25rem 0rem 1.25rem; */
 }
 
 .contents_left_item {
@@ -226,7 +226,7 @@
 /* 가운데 내용의 오른쪽 "일기 쓰기" 아이템 배치 */
 .contents_right_item {
     width: 22.5rem;
-
+    height: 37.75rem;
     padding: 1.5rem;
 
     border: 0.063rem solid #D4D3D3;
@@ -256,7 +256,7 @@
 
 .write_mood_select {
     width: 100%;
-    height: 108px;
+    height: 6.75rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -364,9 +364,10 @@
 
     background-color: #FFFFFFE5;
     
-    position: fixed;
-    bottom: 0.625rem;
-    left: 90%;
+    position: sticky;
+    
+    bottom: 20px;
+    left: 100%;
 }
 
 /* 바닥글 영역 */
