--- a/01-diary/index_mobile.css
+++ b/01-diary/index_mobile.css
@@ -47,6 +47,7 @@
         order: 1;
 
         width: 100%;
+        height: 100%;
     }
 
     .write_diary {
@@ -67,5 +68,9 @@
 
     .diary_write_items {
         width: 100%;
+    }
+
+    .top_scroll_floating_button {
+        order: 4;
     }
 }
