--- a/section03/css/common.css
+++ b/section03/css/common.css
@@ -52,6 +52,8 @@
 /* Layouts */
 
 .app {
+  width: 100vw;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,7 +62,11 @@
 
 .app-inside {
   width: 100%;
+  height: 100%;
   padding: var(--gap-sm);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
@@ -70,6 +76,7 @@
 
 .container {
   width: 100%;
+  height: 100%;
   padding: var(--gap-lg) 0 var(--gap-xxl);
   position: relative;
 }
@@ -88,7 +95,6 @@
 }
 
 .panel-list {
-  width: 100%;
   flex-wrap: wrap;
 }
 
@@ -312,10 +318,10 @@ body {
 }
 
 .footer {
-  width: 100%;
   background-color: var(--gray-50);
   display: flex;
   justify-content: center;
+  height: 110px;
 }
 
 .footer-inside {
@@ -346,21 +352,35 @@ body {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 900px) {
   .app {
     justify-content: flex-start;
     align-items: flex-start;
   }
   .main-content {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
+  .main-content > * {
+    width: 100%;
+  }
   .container-cover {
     max-width: 100%;
+  }
+
+  .filter {
+    order: 2;
   }
 
   .panel-list {
     display: inline-grid;
     grid-template-columns: 1fr 1fr;
+    order: 3;
+  }
+
+  .side-panel {
+    order: 1;
+    flex-basis: 100%;
+    max-width: 100% !important;
   }
 }
