--- a/section03/css/index.css
+++ b/section03/css/index.css
@@ -2,6 +2,10 @@
 
 /* Components */
 
+.container {
+  max-width: 1168px;
+}
+
 .container-cover {
   height: 240px;
   border-radius: var(--radius-lg);
@@ -36,7 +40,19 @@
   font-weight: bold;
 }
 
+.main {
+  width: 100%;
+  height: 100%;
+}
+
+.main-content {
+  position: relative;
+  flex-wrap: wrap;
+  gap: var(--gap-lg);
+}
+
 .filter {
+  flex-basis: 100%;
   position: sticky;
   top: 80px;
   left: 0px;
@@ -60,18 +76,15 @@
 
 .filter-emotion.scrolled {
   color: var(--gray-w);
+  border-color: var(--gray-b);
   background-color: var(--gray-b);
   background-image: url('../assets/images/icon_arrow_down_scrolled.svg');
 }
 
-.main-content {
-  gap: var(--gap-lg);
-  padding-top: var(--gap-xxl);
-}
-
 .panel-list {
   gap: var(--gap-lg);
-  align-items: flex-start;
+  flex-basis: 0;
+  flex-grow: 1;
 }
 
 .panel-list .no-content {
@@ -83,9 +96,10 @@
 }
 
 .panel-item {
-  max-width: 380px;
+  flex-basis: 380px;
   transition: all 0.5s ease-out;
   border-radius: var(--radius-md);
+  background-color: var(--gray-w);
   position: relative;
 }
 
@@ -114,8 +128,6 @@
 }
 
 .emotion-card {
-  width: 100%;
-  height: 100%;
   border-radius: var(--radius-md);
   overflow: hidden;
 }
@@ -144,10 +156,11 @@
 }
 
 .side-panel {
-  align-self: self-start;
+  max-width: 360px;
   padding: var(--gap-lg);
   border: 1px solid var(--gray-200);
   border-radius: var(--radius-md);
+  background-color: var(--gray-w);
 }
 
 .side-title {
@@ -182,6 +195,7 @@
 @media (max-width: 360px) {
   .panel-list {
     min-width: 320px;
+    max-width: 100%;
   }
 
   .panel-item {
