💄 style: 일기 입력 폼 align-self 속성 추가

--- a/section03/css/index.css
+++ b/section03/css/index.css
@@ -161,6 +161,7 @@
   border: 1px solid var(--gray-200);
   border-radius: var(--radius-md);
   background-color: var(--gray-w);
+  align-self: self-start;
 }
 
 .side-title {
